--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
         <title>Geosolve</title>
         <meta charset="UTF-8">
         <link rel="icon" href="assets/marker.svg" type="image/svg+xml">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
+        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -15,7 +16,7 @@
         <div>
             <input type="file" id="image">
         </div>
-        <script src="index.js"></script>
+        <script src="/js/script.js"></script>
         <img id="outputImage" hidden>
         <div id="map">
             <iframe id="mapFrame"
