--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,13 @@
         <title>Geosolve</title>
         <meta charset="UTF-8">
         <link rel="icon" href="assets/marker.svg" type="image/svg+xml">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/css/tailwind.css">
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="main">
-            <h1>Geosolve</h1>
+            <h1 class="text-3xl font-bold underline">Geosolve</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer a ligula ultrices erat eleifend dapibus.</p>
         </div>
         <div>
