--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,17 @@
+@import "tailwindcss";
+
 #main, body {
     text-align: center;
     display: inline;
     font-size: xx-large;
-    font-family: 'Courier New', Courier, monospace;
 }
 #main > p {
     font-size: larger;
 }
 body {
     background-color: #c8edad;
+}
+
+@theme {
+    --font-display: "Times New Roman", "sans-serif";
 }
