--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -31,5 +32,45 @@
             </iframe>
         </div>
 
+    </body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Geosolve</title>
+        <meta charset="UTF-8">
+        <link rel="icon" href="assets/marker.svg" type="image/svg+xml">
+        <link rel="stylesheet" href="/css/styles.css">
+        <meta name="viewport" content="device-width, initial-scale=1.0">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Gantari:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div id="text">
+            <div id="marker"></div>
+            <div id="title">Geo&nbsp;&nbsp;&nbsp;solve</div>
+            <div id="line-break"></div>
+            <div id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus congue purus ut nunc consectetur scelerisque. Nulla sed auctor ligula. Suspendisse rhoncus et dolor sit amet volutpat.</div>
+        </div>
+
+        <!--<div id="star"></div>-->
+        <img id="star1" class="stars" src="assets/star.svg" alt="star">
+        <img id="star2" class="stars" src="assets/star.svg" alt="star">
+        <img id="star3" class="stars" src="assets/star.svg" alt="star">
+        <img id="star4" class="stars" src="assets/star.svg" alt="star">
+        <img id="star5" class="stars" src="assets/star.svg" alt="star">
+        <img id="star6" class="stars" src="assets/star.svg" alt="star">
+        <img id="star7" class="stars" src="assets/star.svg" alt="star">
+        <img id="star8" class="stars" src="assets/star.svg" alt="star">
+        <img id="star9" class="stars" src="assets/star.svg" alt="star">
+        <img id="star10" class="stars" src="assets/star.svg" alt="star">
+        <img id="star11" class="stars" src="assets/star.svg" alt="star">
+
+        <button>amongus</button>
+        <img class="earth" src="assets/Earth.svg" alt="ocean">
     </body>
 </html>
