--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,12 @@ body {
 */
 
 /* vecteezy_location-map-marker-icon-symbol-on-transparent-background_17178337 1 */
+html, body {
+  height: 100%;
+  width: 100%; 
+  margin: 0;    
+  padding: 0;   
+}
 body {
     background-color: black
 }
@@ -25,15 +31,15 @@ body {
     position: relative;
     width: 1000px;
     height: 500px;
-    left: 0%;
-    top: 0%; 
+    left: 235px;
+    top: -25px; 
 }
 #marker {
     position: relative;
     width: 72px;
     height: 72px;
     left: 41%;
-    top: 25%;
+    top: 22.5%;
     background: url(../assets/marker.png);
     background-size: contain;
 }
@@ -41,8 +47,8 @@ body {
     position: relative;
     width: 925px;
     height: 161px;
-    left: 0px;
-    top: 0px;
+    left: 0%;
+    top: 0%;
 
     font-family: 'Gantari';
     font-style: normal;
@@ -56,10 +62,10 @@ body {
 }
 #line-break {
     position: relative;
-    width: 718px;
+    width: 525px;
     height: 3px;
-    left: 11%;
-    top: 0%;
+    left: 20%;
+    top: -5%;
 
     background: #D9D9D9;
     border-radius: 90px;
@@ -69,13 +75,13 @@ body {
     position: relative;
     width: 831.13px;
     height: 160.91px;
-    left: 7%;
-    top: 5%;
+    left: 5%;
+    top: 0%;
 
     font-family: 'Gantari';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 38px;
     text-align: center;
     letter-spacing: -0.02em;
@@ -102,7 +108,7 @@ body {
 }
 #star3 {
     left: 70.13%;
-    top: 3.31%;
+    top: 40%;
     transform: rotate(-20.49deg);
 }
 #star4 {
@@ -115,12 +121,12 @@ body {
     top: 88.73%;
 }
 #star6 {
-    left: 54.62%;
+    left: 90.62%;
     top: 86.53%;
     transform: rotate(-28.06deg);
 }
 #star7 {
-    left: 63.52%;
+    left: 80.52%;
     top: 22.49%;
     transform: rotate(-19.79deg);
 }
@@ -138,15 +144,15 @@ body {
 }
 #star11 {
     left: 36.04%;
-    right: 61.15%;
-    top: 13.92%;
-    bottom: 80.78%;
+    top: 44.92%;
     transform: rotate(20.19deg);
 }
 .earth {
-    position: fixed;
-    left: 1000px;
-    top: -151.5px;
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    left: 0%;
+    top: 50%;
 }
 
 
