--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,13 +12,18 @@
         <link href="https://fonts.googleapis.com/css2?family=Gantari:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div id="text">
-            <div id="marker"></div>
-            <div id="title">Geo&nbsp;&nbsp;&nbsp;solve</div>
-            <div id="line-break"></div>
-            <div id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus congue purus ut nunc consectetur scelerisque. Nulla sed auctor ligula. Suspendisse rhoncus et dolor sit amet volutpat.</div>
+        <div id="mainContent">
+            <div id="title">
+                <h1 id="titleText">Geo</h1>
+                <div id="marker"></div>
+                <h1 id="titleText">solve</h1>
+            </div>
+            <div id="mainContentContainer">
+                <div id="line-break"></div>
+                <div id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus congue purus ut nunc consectetur scelerisque. Nulla sed auctor ligula. Suspendisse rhoncus et dolor sit amet volutpat.</div>
+                <button class="uploadButton">Upload Image</button>
+            </div>
         </div>
-        <button class="uploadButton">Upload Image</button>
 
         <!--<div id="star"></div>-->
         <img id="star1" class="stars" src="assets/star.svg" alt="star">
