--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,36 +25,41 @@ html, body {
   padding: 0;   
 }
 body {
-    background-color: black
+    background-color: black;
+    font-family: 'Gantari', sans-serif;
 }
-#text {
+#mainContent {
     position: relative;
-    width: 1000px;
-    height: 500px;
-    left: 235px;
-    top: -25px; 
+    margin-top: 10px;
+    padding:  30px 20%;
+}
+
+#mainContentContainer {
+    text-align: center;
+    margin: auto;
+}
+
+#title {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 #marker {
-    position: relative;
     width: 72px;
     height: 72px;
-    left: 41%;
-    top: 22.5%;
     background: url(../assets/marker.png);
     background-size: contain;
 }
-#title {
-    position: relative;
-    width: 925px;
-    height: 161px;
-    left: 0%;
-    top: 0%;
-
-    font-family: 'Gantari';
+#titleText {
+    width: fit-content;
+    margin-top: 0;
+    margin-bottom: 0;
     font-style: normal;
     font-weight: 400;
-    font-size: 72px;
-    line-height: 154px;
+    font-size: 100px;
     text-align: center;
     letter-spacing: 0.01em;
 
@@ -64,24 +69,19 @@ body {
     position: relative;
     width: 525px;
     height: 3px;
-    left: 20%;
-    top: -5%;
+    margin: auto;
+
 
     background: #D9D9D9;
     border-radius: 90px;
 
 }
 #description {
+    padding:  30px 0;
     position: relative;
-    width: 831.13px;
-    height: 160.91px;
-    left: 5%;
-    top: 0%;
-
-    font-family: 'Gantari';
     font-style: normal;
     font-weight: 400;
-    font-size: 15px;
+    font-size: 30px;
     line-height: 38px;
     text-align: center;
     letter-spacing: -0.02em;
@@ -152,11 +152,13 @@ body {
     width: 100%;
     height: 50%;
     left: 0%;
-    top: 50%;
+    top: 52%;
 }
 
 .uploadButton {
     background-color: transparent;
+    margin-top: 20px;
+    margin-bottom: 0;
     color: white;
     font-weight: 600;
     border: 3px solid #9FDB11;
@@ -170,6 +172,7 @@ body {
     font-weight: 600;
     color: black;
     background-color: #9FDB11;
+    cursor: pointer;
 }
 
 
