hide img element

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
         <div id="earth-container">
             <lottie-player id="earth" src="assets/Earth.json" background="transparent" speed="1" loop autoplay></lottie-player>
         </div>
-        <div id="second-screen">
+        <div id="second-screen" hidden>
             <div class="image-crop-container">
                 <img id="input-image-screen" src="..." alt="inputImage">
             </div>
